docs/tests/typing/bad/testfile-arith-5.cpp

int main() { char *p; 1-p; }
